{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 150,
  "lineage": "9df032cf-d4bc-e834-af5d-4cbe76e7c53b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "monitor_ec2_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0045f51c64fd08486",
            "association_id": "eipassoc-0d3eae5aea7a5c9b0",
            "domain": "vpc",
            "id": "eipalloc-0045f51c64fd08486",
            "instance": "i-094e5902f8d7e0f60",
            "network_border_group": "us-east-1",
            "network_interface": "eni-033d10bc963fd1163",
            "private_dns": "ip-10-0-101-175.ec2.internal",
            "private_ip": "10.0.101.175",
            "public_dns": "ec2-52-3-198-86.compute-1.amazonaws.com",
            "public_ip": "52.3.198.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Category": "EC2",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "EC2",
              "ProjectName": "IPS"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.ssh_http",
            "data.http.my_public_ip",
            "module.ips_vpc.aws_subnet.public",
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.monitor_ec2.aws_instance.this",
            "module.monitor_ec2.aws_spot_instance_request.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:security-group/sg-0331e18c106c96fbd",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0331e18c106c96fbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "118.69.73.134/32"
                ],
                "description": "HTTP from My public IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "118.69.73.134/32"
                ],
                "description": "SSH from My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_http",
            "name_prefix": "",
            "owner_id": "143045177648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Category": "VPC",
              "Environment": "Dev",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Environment": "Dev",
              "ProjectName": "IPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.my_public_ip",
            "module.ips_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:network-acl/acl-0f8027f0169f9adcc",
            "default_network_acl_id": "acl-0f8027f0169f9adcc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f8027f0169f9adcc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "143045177648",
            "subnet_ids": [
              "subnet-02ac8559dc59cd793",
              "subnet-062222747868af20e"
            ],
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc-default",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc-default",
              "ProjectName": "IPS"
            },
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ips_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:route-table/rtb-0f753caff61f42d34",
            "default_route_table_id": "rtb-0f753caff61f42d34",
            "id": "rtb-0f753caff61f42d34",
            "owner_id": "143045177648",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc-default",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc-default",
              "ProjectName": "IPS"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ips_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:security-group/sg-0fdabbcb263265111",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fdabbcb263265111",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "143045177648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc-default",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc-default",
              "ProjectName": "IPS"
            },
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ips_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:internet-gateway/igw-09757864404f8a368",
            "id": "igw-09757864404f8a368",
            "owner_id": "143045177648",
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc",
              "ProjectName": "IPS"
            },
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "dependencies": [
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09757864404f8a368",
            "id": "r-rtb-0393f6762a22ac58f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0393f6762a22ac58f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ips_vpc.aws_internet_gateway.this",
            "module.ips_vpc.aws_route_table.public",
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:route-table/rtb-0faee86e3206b2670",
            "id": "rtb-0faee86e3206b2670",
            "owner_id": "143045177648",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc-private-us-east-1a",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc-private-us-east-1a",
              "ProjectName": "IPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:route-table/rtb-0393f6762a22ac58f",
            "id": "rtb-0393f6762a22ac58f",
            "owner_id": "143045177648",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc-public",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc-public",
              "ProjectName": "IPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6b2ac6bb1184212",
            "route_table_id": "rtb-0faee86e3206b2670",
            "subnet_id": "subnet-02ac8559dc59cd793"
          },
          "dependencies": [
            "module.ips_vpc.aws_route_table.private",
            "module.ips_vpc.aws_subnet.private",
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd12411e4153c44",
            "route_table_id": "rtb-0393f6762a22ac58f",
            "subnet_id": "subnet-062222747868af20e"
          },
          "dependencies": [
            "module.ips_vpc.aws_route_table.public",
            "module.ips_vpc.aws_subnet.public",
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:subnet/subnet-02ac8559dc59cd793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac8559dc59cd793",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143045177648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc-private-us-east-1a",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc-private-us-east-1a",
              "ProjectName": "IPS"
            },
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "dependencies": [
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:subnet/subnet-062222747868af20e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062222747868af20e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143045177648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc-public-us-east-1a",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc-public-us-east-1a",
              "ProjectName": "IPS"
            },
            "vpc_id": "vpc-044a371be6c9be84c"
          },
          "dependencies": [
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ips_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143045177648:vpc/vpc-044a371be6c9be84c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8027f0169f9adcc",
            "default_route_table_id": "rtb-0f753caff61f42d34",
            "default_security_group_id": "sg-0fdabbcb263265111",
            "dhcp_options_id": "dopt-0ebe72385c17b5596",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044a371be6c9be84c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f753caff61f42d34",
            "owner_id": "143045177648",
            "tags": {
              "Category": "VPC",
              "Name": "ips-vpc",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "VPC",
              "Name": "ips-vpc",
              "ProjectName": "IPS"
            }
          }
        }
      ]
    },
    {
      "module": "module.monitor_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:143045177648:instance/i-094e5902f8d7e0f60",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094e5902f8d7e0f60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033d10bc963fd1163",
            "private_dns": "ip-10-0-101-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043b440819d7eb321",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062222747868af20e",
            "tags": {
              "Category": "EC2",
              "Environment": "Dev",
              "Name": "monitor-ec2",
              "ProjectName": "IPS"
            },
            "tags_all": {
              "Category": "EC2",
              "Environment": "Dev",
              "Name": "monitor-ec2",
              "ProjectName": "IPS"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "monitor-ec2"
            },
            "vpc_security_group_ids": [
              "sg-0331e18c106c96fbd"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_http",
            "data.http.my_public_ip",
            "module.ips_vpc.aws_subnet.public",
            "module.ips_vpc.aws_vpc.this",
            "module.ips_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    }
  ]
}